End of lesson 91

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=cat,EN
+spring.profiles.active=cat,EN,qa
+jerko.username=superuser
+jerko.password=dbPassword
+jerko.jdbcurl=someUrlforDB
